[Add][FE] Add UI
